pact test