@@ -182,9 +182,11 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
-          <!-- @{argLine} is necessary here so that that the jacoco:prepare-agent output is included for tests -->
-          <!-- illegal-access=permit required for java 11 -->
-          <argLine>@{argLine} -Xmx1024m -Xverify:none -XX:TieredStopAtLevel=1 --illegal-access=permit</argLine>
+          <!-- @{argLine} is necessary here so that the jacoco:prepare-agent output is included for tests -->
+          <argLine>@{argLine} -Xmx1024m -Xverify:none -XX:TieredStopAtLevel=1</argLine>
+          <systemPropertyVariables>
+            <pact.rootDir>target/pacts</pact.rootDir>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
 
@@ -450,6 +452,34 @@
       <artifactId>dropwizard-forms</artifactId>
       <version>${dropwizard.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>au.com.dius.pact.consumer</groupId>
+      <artifactId>junit5</artifactId>
+      <version>4.2.6</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>au.com.dius.pact.provider</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.2.6</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+  <dependency>
+    <groupId>org.apache.httpcomponents.client5</groupId>
+    <artifactId>httpclient5-fluent</artifactId>
+    <version>5.2.1</version>
+    <scope>test</scope>
+  </dependency>
+
 
     <dependency>
       <groupId>io.dropwizard</groupId>
